--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Course</title>
+    <title>Git Playlist</title>
     <h1>Bug Branch change</h1>
+    <h2>New Change from main</h2>
 </head>
 <body>
     
